--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,20 @@
 body {
   height: 100vh;
+  width:100%;
   margin: 0;
   padding: 0;
 }
 
 .container {
-  position: absolute;
+  position: flex;
   z-index: 200;
-  color: rgba(0, 0, 0, 0.37);
-  padding-right: 100px;
-  height: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  background-color: rgba(210, 105, 30, 0.281);
+ 
+ 
+  
+  
+ 
 }
+
 
 .all {
   height: 100vh;
@@ -23,7 +24,7 @@ body {
 .hero-text {
   position: relative;
   z-index: 200;
-  background-color: rgba(0, 0, 0, 0.151);
+  
   color: white;
 }
 .backdiv {
