--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,18 @@ body {
   
  
 }
+#trailer{
+color : #b91c1c !important ;
+background-color: black;
+transition: all 0.7s;
+border: 1px solid white;
+
+}
+#trailer:hover{
+  color: white !important;
+  border: 1px solid white;
+  background-color: #c52424;
+}
 
 
 .all {
