new changes in filtring and adding drawer . it's creative way to add about page

--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,10 @@ body {
   position: flex;
   z-index: 200;
   
- 
- 
-  
-  
- 
+
+}
+#drawer{
+  background: linear-gradient(to  left bottom ,  #fca5a5 ,  #03304a ,#b91c1c );
 }
 .filtrage{
   backdrop-filter: blur(14px);
