--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,15 @@
 body {
   height: 100%;
   width:100%;
+
   margin: 0;
+  background-image: url(./componement/media/back.jpg);
+  background-position: center center;
+  background-size: cover;
+  background-color: #b88f33;
+  background-repeat: no-repeat;
   padding: 0;
-  background: linear-gradient(to  left bottom ,  #fca5a5 ,  #03304a ,#b91c1c );
+  
 }
 
 .container {
@@ -13,7 +19,7 @@ body {
 
 }
 #drawer{
-  background: linear-gradient(to  left bottom ,  #fca5a5 ,  #03304a ,#b91c1c );
+  background:linear-gradient(to right , #f3dc6c , #b88f33);
 }
 .filtrage{
   backdrop-filter: blur(14px);
@@ -26,19 +32,27 @@ transition: all 0.7s;
 
 }
 #trailer::focus{
-  background-color: #fca5a5;
+  background:linear-gradient(to right , #f3dc6c , #b88f33);
 }
 #trailer:hover{
   color: black !important;
-  
-  background-color: #fca5a5;
+  transition: all 0.7s;
+  background:linear-gradient(to right , #f3dc6c , #b88f33);
 }
 
 
 .all {
   height: 100vh;
 }
+.notfound{
+  background: transparent;
+   background:linear-gradient(to left , #f3dc6c , #b88f33);
+  backdrop-filter: blur(7px);
+  width: 100%;
+  height:100%;
+  position: absolute;
 
+}
 .hero-text {
   position: relative;
   z-index: 200; /* Keep it on top of the background */
@@ -66,6 +80,17 @@ transition: all 0.7s;
   background-position: center center;
   z-index: 100; /* Lower than the navbar */
 }
+.swal2-install-button {
+  background-color: rgb(30, 158, 30) !important; /* Black background */
+  color: white !important;            /* White text */
+}
+
+.swal2-dismiss-button {
+  background-color: rgb(133, 5, 5);      /* Default background */
+  color: white !important;            /* Black text for dismiss button */
+  border: 1px solid black;            /* Optional: border for dismiss button */
+}
+
 .backend {
   position: absolute;
   top: 8.5%;
@@ -79,7 +104,7 @@ transition: all 0.7s;
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to  left bottom ,  #fca5a5 ,  #03304a ,#b91c1c );
+  background: transparent;
 }
 .noresult{
   width: 400px;
@@ -145,18 +170,4 @@ transition: all 0.7s;
   position: relative;
   overflow: hidden;
   height: auto; /* Adjust as needed to ensure it doesn't cause extra space */
-}
-.anim {
-  color: black;
-  animation-name: now;
-  width: 30%;
-  animation-duration: 4s;
-}
-@keyframes now {
-  from {
-    background-color: black;
-  }
-  to {
-    background-color: red;
-  }
 }
