--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,5 +1,5 @@
 header{
-    background: linear-gradient(to  left bottom ,  #fca5a5 ,  #03304a ,#b91c1c );
+    background: transparent;
     text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.7);
 }
 
