--- a/src/css/animation.css
+++ b/src/css/animation.css
@@ -3,7 +3,8 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  background-color: #03304a;
+  background-color: transparent;
+  backdrop-filter: blur(7px);
   display: flex;
   justify-content: center;
   justify-items: center;
